replaced custom auth with better auth
